image size fixes for all images on small

--- a/src/styles/__buttons.scss
+++ b/src/styles/__buttons.scss
@@ -187,7 +187,7 @@ button, a {
     padding: 12px 15%;
     border-radius: 38px;
     @media(max-width: $screen-xs-max) {
-      margin-top: 150%;
+      margin-top: 130%;
       background-color: #0077bb;
       text-decoration: none;
     }
